@@ -9,6 +9,7 @@ Change Log:
 - New: Two new WordPress filters allow custom positioning and styling of PopUps.
 - Fix: Correctly display Meta-boxes of other plugins in the popup-editor.
 - Better: Forms inside PopUps will only refresh the PopUp and not reload the page.
+- Better: Detection of theme compatibility for loading method "Page Footer" improved.
 
 4.6.1.1
 ----------------------------------------------------------------------
